--- a/k8s/ithc/common/money-claims/claim-store.yaml
+++ b/k8s/ithc/common/money-claims/claim-store.yaml
@@ -48,8 +48,8 @@ spec:
             - sendgrid-api-key
             - staff-email-legal-rep
       environment:
-        CLAIM_STORE_TEST_SUPPORT_ENABLED: true
-        FEATURE_TOGGLES_SAVE_CLAIM_STATE_ENABLED: true
+        
+        
         CLAIM_STAYED_SCHEDULE: "0 0 16 ? * MON-FRI *"
         IDAM_API_URL: https://idam-api.ithc.platform.hmcts.net
         OIDC_ISSUER: https://forgerock-am.service.core-compute-idam-ithc.internal:8443/openam/oauth2/realms/root/realms/hmcts
@@ -58,6 +58,31 @@ spec:
         RPA_NOTIFICATIONS_LEGALSEALEDCLAIMRECIPIENT: civilmoneyclaimsdemo@gmail.com
         RPA_NOTIFICATIONS_BREATHINGSPACERECIPIENT: civilmoneyclaimsdemo@gmail.com
         MANAGEMENT_HEALTH_MAIL_ENABLED: false
+        
+        CLAIM_STORE_TEST_SUPPORT_ENABLED: true
+        FEATURE_TOGGLES_SAVE_CLAIM_STATE_ENABLED: true
+        FEATURE_TOGGLES_STAFF_EMAILS_ENABLED: false
+        FEATURE_TOGGLES_CTSC_ENABLED: true
+        FEATURE_TOGGLES_REMINDER_EMAILS: true
+        MILO_CSV_SCHEDULE: "0 0 8 * * ?"
+        CLAIM_STAYED_SCHEDULE: "0 0 15 ? * MON-FRI *"
+        SCHEDULE_STATE_TRANSITION_WAITING_TRANSFER: ""
+        REFORM_ENVIRONMENT: demo
+        IDAM_WEB_URL: https://idam-web-public.ithc.platform.hmcts.net
+        OIDC_ISSUER: https://forgerock-am.service.core-compute-idam-ithc.internal:8443/openam/oauth2/realms/root/realms/hmcts
+        FEATURE_TOGGLES_BULK_PRINT_TRANSFER_ENABLED: true
+        FEATURE_TOGGLES_STAFF_EMAILS_ENABLED_FOR_LEGAL_REP: true
+        STAFF_NOTIFICATIONS_LEGAL_RECIPIENT: Win10UAT_006@test.justice.gov.uk
+        RPA_NOTIFICATIONS_LEGALSEALEDCLAIMRECIPIENT: Win10UAT_006@test.justice.gov.uk
+        SCHEDULE_ISSUE_CREATED_CLAIMS: 0 31 15 * * ?
+        STAFF_NOTIFICATIONS_SENDER: noreply@mail-money-claims-nonprod.platform.hmcts.net
+        RPA_NOTIFICATIONS_SENDER: noreply@mail-money-claims-nonprod.platform.hmcts.net
+        MILO_CSV_SENDER: noreply@mail-money-claims-nonprod.platform.hmcts.net
+        RPA_NOTIFICATIONS_BREATHINGSPACERECIPIENT: Win10UAT_006@test.justice.gov.uk
+        MANAGEMENT_HEALTH_MAIL_ENABLED: false
+        REFRESH_PODS: true
+        CMC_DB_USERNAME: cmc@cmc-db-v11-demo
+        CMC_DB_HOST: cmc-db-v11-demo.postgres.database.azure.com
     global:
       environment: ithc
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
