--- a/apps/idam-sprod/idam-api/idam-api.yaml
+++ b/apps/idam-sprod/idam-api/idam-api.yaml
@@ -7,7 +7,7 @@ spec:
   releaseName: idam-api
   values:
     java:
-      image: hmctspublic.azurecr.io/idam/api:pr-751
+      image: hmctspublic.azurecr.io/idam/api:preview-c6821e5-20210719124049
       imagePullPolicy: Always
       ingressHost: idam-api-sprod.sandbox.platform.hmcts.net
       replicas: 2
