--- a/k8s/aat/common/divorce/div-fps.yaml
+++ b/k8s/aat/common/divorce/div-fps.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: divorce
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:pr-250-*
+    flux.weave.works/tag.java: glob:prod-*
 spec:
   releaseName: div-fps
   rollback:
@@ -28,7 +28,7 @@ spec:
       readinessPeriod: 15
       useInterpodAntiAffinity: true
       applicationInsightsInstrumentKey: "63c30ef9-a27b-4d38-8afc-4c180fb6ac33"
-      image: hmctspublic.azurecr.io/div/fps:pr-250
+      image: hmctspublic.azurecr.io/div/fps:prod-f061952-20210622120333
       aadIdentityName: divorce
       prometheus:
         enabled: true
