--- a/k8s/perftest/common/probate/probate-frontend.yaml
+++ b/k8s/perftest/common/probate/probate-frontend.yaml
@@ -27,7 +27,7 @@ spec:
       environment:
         EQUALITY_URL: https://pcq.perftest.platform.hmcts.net
         LAUNCHDARKLY_ENABLED: true
-      image: hmctspublic.azurecr.io/probate/frontend:pr-1435-acc67a1-20210702115027
+      image: hmctspublic.azurecr.io/probate/frontend:latest
     global:
       environment: perftest
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
