--- a/k8s/perftest/common/ccpay/ccpay-payment-app.yaml
+++ b/k8s/perftest/common/ccpay/ccpay-payment-app.yaml
@@ -20,7 +20,7 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/payment/api:pr-914-fd7299d-20210709134157
+      image: hmctspublic.azurecr.io/payment/api:pr-914
       imagePullPolicy: Always
       environment:
         DUMMY_RESTART_VAR: true
