--- a/k8s/perftest/common/ccpay/ccpay-payment-app.yaml
+++ b/k8s/perftest/common/ccpay/ccpay-payment-app.yaml
@@ -23,7 +23,7 @@ spec:
       image: hmctspublic.azurecr.io/payment/api:pr-914-f5edb41-20210719155137
       imagePullPolicy: Always
       environment:
-        DUMMY_RESTART_VAR: true
+        DUMMY_RESTART_VAR: false
         POSTGRES_HOST: payment-postgres-db-v11-{{ .Values.global.environment }}.postgres.database.azure.com
         POSTGRES_USERNAME: payment@payment-postgres-db-v11-{{ .Values.global.environment
           }}
