--- a/apps/flux-system/ptl-intsvc/base/kustomization.yaml
+++ b/apps/flux-system/ptl-intsvc/base/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ../../base/image-update-automation.yaml
   - git-credentials.yaml
   - https://github.com/fluxcd/flux2/manifests/integrations/registry-credentials-sync/azure?ref=main
-  - ../../backstage/automation
+  - ../../../backstage/automation
 
 patchesStrategicMerge:
   - config-patches.yaml
