--- a/k8s/namespaces/bsp/bulk-scan-processor/demo.yaml
+++ b/k8s/namespaces/bsp/bulk-scan-processor/demo.yaml
@@ -13,4 +13,5 @@ spec:
         #60 days in seconds
         SAS_TOKEN_VALIDITY: "5184000"
         DELETE_REJECTED_FILES_TTL: PT1H
+        REFORM_LOG_LEVEL: "DEBUG"
       image: hmctspublic.azurecr.io/bulk-scan/processor:pr-2010-b60444c-20210720134112
