--- a/k8s/perftest/common/ccpay/ccpay-bubble-frontend.yaml
+++ b/k8s/perftest/common/ccpay/ccpay-bubble-frontend.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: fees-pay
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.nodejs: pr-491-*
+    flux.weave.works/tag.nodejs: pr-prod-*
 spec:
   releaseName: ccpay-bubble-frontend
   rollback:
@@ -20,7 +20,7 @@ spec:
     nodejs:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/ccpay/bubble-frontend:pr-491-0b42ad4-20210708095353
+      image: hmctspublic.azurecr.io/ccpay/bubble-frontend:pr-prod
       imagePullPolicy: Always
       environment:
         PCIPAL_ANTENNA_URL: https://paybubble.perftest.platform.hmcts.net/ccd-search
