--- a/k8s/aat/cluster-00-overlay/probate/kustomization.yaml
+++ b/k8s/aat/cluster-00-overlay/probate/kustomization.yaml
@@ -2,6 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: probate
 bases:
+- ../../../namespaces/probate/probate-cron-reactivate-dormant-cases/probate-cron-reactivate-dormant-cases.yaml
+- ../../../namespaces/probate/probate-cron-make-dormant-cases/probate-cron-make-dormant-cases.yaml
 - ../../../namespaces/probate/probate-cron-smee-and-ford-extract/probate-cron-smee-and-ford-extract.yaml
 patchesStrategicMerge:
+- ../../../namespaces/probate/probate-cron-reactivate-dormant-cases/aat-00.yaml
+- ../../../namespaces/probate/probate-cron-make-dormant-cases/aat-00.yaml
 - ../../../namespaces/probate/probate-cron-smee-and-ford-extract/aat-00.yaml
