--- a/k8s/namespaces/rd/rd-user-profile-api/aat.yaml
+++ b/k8s/namespaces/rd/rd-user-profile-api/aat.yaml
@@ -10,3 +10,5 @@ spec:
         DELETE_ORG: true
         PRD_S2S_AUTHORISED_SERVICES: rd_professional_api,rd_user_profile_api,rd_profile_sync,rd_caseworker_ref_api,iac
         APPLICATION_LOGGING_LEVEL: DEBUG
+        FEIGN_CLIENT_CONFIG_DEFAULT_CONNECTTIMEOUT: 30000
+        FEIGN_CLIENT_CONFIG_DEFAULT_READTIMEOUT: 30000
