--- a/apps/probate/demo/00/kustomization.yaml
+++ b/apps/probate/demo/00/kustomization.yaml
@@ -3,6 +3,8 @@ kind: Kustomization
 namespace: probate
 resources:
   - ../base
+  - ../../probate-cron-make-dormant-cases/probate-cron-make-dormant-cases.yaml
+  - ../../probate-cron-reactivate-dormant-cases/probate-cron-reactivate-dormant-cases.yaml
 patchesStrategicMerge:
   - ../../probate-cron-make-dormant-cases/demo/00.yaml
   - ../../probate-cron-reactivate-dormant-cases/demo/00.yaml
