--- a/apps/et/et-cos/prod.yaml
+++ b/apps/et/et-cos/prod.yaml
@@ -16,3 +16,4 @@ spec:
         IDAM_API_JWK_URL: https://idam-api.platform.hmcts.net/jwks
         CCD_GATEWAY_BASE_URL: https://manage-case.platform.hmcts.net
         SECURE_DOC_STORE_FEATURE: false
+        REFERRAL_TEMPLATE_ID: 8353cb99-5bee-4812-a783-76b733898f9c
