--- a/k8s/namespaces/camunda/camunda-api/prod.yaml
+++ b/k8s/namespaces/camunda/camunda-api/prod.yaml
@@ -7,4 +7,4 @@ spec:
     java:
       memoryRequests: "1Gi"
       environment:
-        WA_AUTO_CONFIGURE_TASKS_ENABLED: true
+        WA_AUTO_CONFIGURE_TASKS_ENABLED: false
