--- a/apps/divorce/div-cfs/div-cfs.yaml
+++ b/apps/divorce/div-cfs/div-cfs.yaml
@@ -8,6 +8,8 @@ spec:
   values:
     java:
       replicas: 2
+      memoryLimits: "2Gi"
+      cpuLimits: "2500m"
       readinessDelay: 45
       readinessTimeout: 5
       readinessPeriod: 15
