--- a/k8s/namespaces/civil/civil-service/demo.yaml
+++ b/k8s/namespaces/civil/civil-service/demo.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     java:
-      image: hmctspublic.azurecr.io/civil/service:pr-1351-d2a8cc9-20220912120123 #{"$imagepolicy": "flux-system:demo-civil-service"}
+      image: hmctspublic.azurecr.io/civil/service:prod-7f9e1f4-20220912172553 #{"$imagepolicy": "flux-system:civil-service"}
       keyVaults:
         civil:
           resourceGroup: civil
