--- a/apps/probate/probate-cron-reactivate-dormant-cases/probate-cron-reactivate-dormant-cases.yaml
+++ b/apps/probate/probate-cron-reactivate-dormant-cases/probate-cron-reactivate-dormant-cases.yaml
@@ -9,7 +9,7 @@ spec:
       environment:
         TASK_NAME: ReactivateDormantCasesTask
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/probate/back-office:pr-2018-b90888a-20220908085718 #{"$imagepolicy": "flux-system:demo-probate-back-office"}
+      image: hmctspublic.azurecr.io/probate/back-office:prod-b7584f8-20220902153555 #{"$imagepolicy": "flux-system:probate-back-office"}
     schedule: 0 * * * *
   chart:
     spec:
