--- a/k8s/namespaces/probate/probate-cron-smee-and-ford-extract/demo.yaml
+++ b/k8s/namespaces/probate/probate-cron-smee-and-ford-extract/demo.yaml
@@ -11,16 +11,17 @@ spec:
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       environment: demo
     job:
-      image: hmctspublic.azurecr.io/probate/back-office:prod-1db5587-20220913093950 #{"$imagepolicy": "flux-system:probate-back-office"}
+      image: hmctspublic.azurecr.io/probate/back-office:pr-2028-991dd39-20220913104327 #{"$imagepolicy": "flux-system:demo-probate-back-office"}
       environment:
         CCD_GATEWAY_HOST: https://manage-case.demo.platform.hmcts.net
-        DUMMY_PROPERTY: DUMMY10
+        DUMMY_PROPERTY: DUMMY11
         PROBATE_POSTGRESQL_USER: probateman_user@probatemandb-postgres-db-v11-demo
         PROBATE_POSTGRESQL_HOSTNAME: probatemandb-postgres-db-v11-demo.postgres.database.azure.com
         EXCEPTED_ESTATE_DATE_OF_DEATH: 2022-01-01
         BLOB_STORAGE_SMEEANDFORD_FEATURE_ENABLED: true
         CASE_DOCUMENT_AM_URL: http://ccd-case-document-am-api-demo.service.core-compute-demo.internal
         IDAM_SERVICE_HOST: https://idam-api.demo.platform.hmcts.net
+        ADHOC_JOB_DATE: 2022-09-01
       keyVaults:
         probate:
           secrets:
