--- a/apps/admin/traefik2/sbox-intsvc/00.yaml
+++ b/apps/admin/traefik2/sbox-intsvc/00.yaml
@@ -8,3 +8,6 @@ spec:
     service:
       spec:
         loadBalancerIP: "10.70.25.250"
+    additionalArguments:
+      - "--entryPoints.web.forwardedHeaders.insecure=false"
+      - "--entryPoints.websecure.forwardedHeaders.insecure=true"
