--- a/clusters/preview/base/kustomization.yaml
+++ b/clusters/preview/base/kustomization.yaml
@@ -52,6 +52,7 @@ resources:
   - ../../../apps/ts/base/kustomize.yaml
   - ../../../apps/nfdiv/base/kustomize.yaml
   - ../../../apps/dtsse/base/kustomize.yaml
+  - ../../../apps/sptribs/base/kustomize.yaml
 patches:
   - path: ../../../apps/base/kustomize.yaml
     target:
