--- a/apps/dtsse/aat/base/kustomization.yaml
+++ b/apps/dtsse/aat/base/kustomization.yaml
@@ -1,5 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: dtsse
 resources:
   - ../../base
-namespace: dtsse
+  - ../../dtsse-dashboard-github-integration/dtsse-dashboard-github-integration.yaml
+patchesStrategicMerge:
+  - ../../identity/aat.yaml
+
