--- a/apps/dtsse/identity/aat.yaml
+++ b/apps/dtsse/identity/aat.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: dtsse
 spec:
   resourceID: "/subscriptions/1c4f0704-a29e-403d-b719-b90c34ef14c9/resourcegroups/managed-identities-aat-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/dtsse-aat-mi"
-  clientID: "8ec14169-1ea2-47ee-91e5-446ab6abc8ef" # TODO where does this come from?
+  clientID: "222ee84f-f76d-4922-931a-0631605a56b5"
 
