--- a/k8s/namespaces/fees-pay/ccpay-refunds-api/demo.yaml
+++ b/k8s/namespaces/fees-pay/ccpay-refunds-api/demo.yaml
@@ -11,5 +11,5 @@ spec:
     java:
       image: hmctspublic.azurecr.io/ccpay/refunds-api:pr-158-a87af1b-20220927094748 #{"$imagepolicy": "flux-system:demo-ccpay-refunds-api"}
       environment:
-        DUMMY_VARIABLE: true
+        DUMMY_VARIABLE: false
         LIBERATA_BASE_URL: "https://lascustomerportaluat.liberata.com"
