--- a/apps/flux-system/automation/kustomization.yaml
+++ b/apps/flux-system/automation/kustomization.yaml
@@ -50,6 +50,7 @@ resources:
   - ../../fis/automation
   - ../../private-law/automation
   - ../../ts/automation
+  - ../../dtsse/automation
   - ../../sptribs/automation
 patches:
   - path: hmctspublic-image-repo.yaml
