--- a/k8s/namespaces/fees-pay/ccpay-payment-api-int/demo.yaml
+++ b/k8s/namespaces/fees-pay/ccpay-payment-api-int/demo.yaml
@@ -9,7 +9,7 @@ spec:
       image: hmctspublic.azurecr.io/payment/api:pr-1265-798f5f2-20220927110041 #{"$imagepolicy": "flux-system:demo-int-ccpay-payment-app"}
       imagePullPolicy: Always
       environment:
-        DUMMY_RESTART_VAR: false
+        DUMMY_RESTART_VAR: true
         POSTGRES_HOST: payment-postgres-db-v11-{{ .Values.global.environment }}.postgres.database.azure.com
         POSTGRES_NAME: postgresqldb2
         POSTGRES_USERNAME: payment@payment-postgres-db-v11-{{ .Values.global.environment }}
