--- a/apps/et/et-msg-handler/demo-image-policy.yaml
+++ b/apps/et/et-msg-handler/demo-image-policy.yaml
@@ -6,7 +6,7 @@ metadata:
     hmcts.github.com/prod-automated: disabled
 spec:
   filterTags:
-    pattern: '^prod-[a-f0-9]+-(?P<ts>[0-9]+)'
+    pattern: '^pr-210-*'
     extract: '$ts'
   policy:
     alphabetical:
