--- a/k8s/namespaces/nfdiv/nfdiv-cron-migrate-cases/prod-00.yaml
+++ b/k8s/namespaces/nfdiv/nfdiv-cron-migrate-cases/prod-00.yaml
@@ -10,6 +10,7 @@ spec:
       environment:
         IDAM_API_BASEURL: "https://idam-api.platform.hmcts.net"
         ENABLE_PAPER_APPLICATION_MIGRATION: true
+        ENABLE_CONFIRM_READ_PETITION_MIGRATION: true
     global:
       jobKind: CronJob
       enableKeyVaults: true
