--- a/k8s/namespaces/am/am-role-assignment-service/demo.yaml
+++ b/k8s/namespaces/am/am-role-assignment-service/demo.yaml
@@ -8,6 +8,6 @@ spec:
       replicas: 5
       environment:
         AM_INFO: true
-        APPLICATION_LOGGING_LEVEL: INFO
+        APPLICATION_LOGGING_LEVEL: DEBUG
         BYPASS_ORG_DROOL_RULE: true
         MAX_POOL_SIZE: 10
