--- a/k8s/namespaces/sscs/sscs-tribunals-api/demo.yaml
+++ b/k8s/namespaces/sscs/sscs-tribunals-api/demo.yaml
@@ -26,4 +26,4 @@ spec:
         JUDICIAL_REF_API_URL: http://rd-judicial-api-demo.service.core-compute-demo.internal
         GAPS_SWITCHOVER_FEATURE: true
         CASE_ACCESS_MANAGEMENT_FEATURE: true
-        SCHEDULE_LISTING_FEATURE: true
+        SCHEDULE_LISTING_FEATURE: false
