--- a/apps/idam/idam-web-public/perftest.yaml
+++ b/apps/idam/idam-web-public/perftest.yaml
@@ -13,6 +13,7 @@ spec:
         SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_OIDC_ISSUERURI: http://51.143.139.240:9080/auth/realms/jhipster
         SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENTID: internal
         SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENTSECRET: internal
+        SERVER_CONNECTIONREQUESTTIMEOUT: 20000
     global:
       environment: perftest
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
