--- a/apps/et/automation/kustomization.yaml
+++ b/apps/et/automation/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ../et-msg-handler/image-repo.yaml
   - ../et-msg-handler/image-policy.yaml
   - ../et-msg-handler/ithc-image-policy.yaml
+  - ../et-msg-handler/demo-image-policy.yaml
   - ../et-msg-handler/perftest-image-policy.yaml
   - ../et-sya-api/image-repo.yaml
   - ../et-sya-api/image-policy.yaml
