--- a/k8s/namespaces/fees-pay/pba-payment-job/demo.yaml
+++ b/k8s/namespaces/fees-pay/pba-payment-job/demo.yaml
@@ -8,8 +8,8 @@ spec:
   values:
     job:
       image: "hmctspublic.azurecr.io/payment/jobs:pr-44-5da30d5-20220928054120" #{"$imagepolicy": "flux-system:demo-pba-csv-report"}
-      schedule: "*/3 * * * *"
+      schedule: "30 02 * * *"
       environment:
-        DUMMY_RESTART_VAR: true
+        DUMMY_RESTART_VAR: false
     global:
       environment: demo
