--- a/apps/divorce/div-fps/aat.yaml
+++ b/apps/divorce/div-fps/aat.yaml
@@ -11,3 +11,4 @@ spec:
       environment:
         GENERAL_APPLICATION_WITHOUT_NOTICE_FEE_KEYWORD: "GeneralAppWithoutNotice"
         FEATURE_FEE_PAY_KEYWORDS: "true"
+        VAR_FV2: trig-aat-1
