--- a/apps/cnp/sbox/base/test-ingress-redirect.yaml
+++ b/apps/cnp/sbox/base/test-ingress-redirect.yaml
@@ -5,10 +5,7 @@ kind: Ingress
 metadata:
   annotations:
     kubernetes.io/ingress.class: traefik
-    traefik.ingress.kubernetes.io/redirect-permanent: "true"
-    traefik.ingress.kubernetes.io/redirect-regex: ^https://labs-mokainosspringboot-sandbox.service.core-compute-sandbox.internal(.*)
-    traefik.ingress.kubernetes.io/redirect-replacement: https://plum.sandbox.platform.hmcts.net
-    traefik.ingress.kubernetes.io/router.middlewares: cnp-registerorgredirect@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: cnp-mokainosspringboot@kubernetescrd
   name: plum-web-redirect
   namespace: cnp
 spec:
@@ -27,10 +24,10 @@ spec:
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: registerorgredirect
-  namespace: xui
+  name: mokainosspringboot
+  namespace: cnp
 spec:
   redirectRegex:
     permanent: true
-    regex: ^http://register-org.platform.hmcts.net/(.*)
-    replacement: http://manage-org.platform.hmcts.net/register-org/register
+    regex: ^https://labs-mokainosspringboot-sandbox.service.core-compute-sandbox.internal(.*)
+    replacement: https://plum.sandbox.platform.hmcts.net
