--- a/k8s/namespaces/fis/fis-hmc-api/fis-hmc-api.yaml
+++ b/k8s/namespaces/fis/fis-hmc-api/fis-hmc-api.yaml
@@ -1,17 +1,17 @@
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
-  name: fis-hmc
+  name: fis-hmc-api
   namespace: fis
 spec:
-  releaseName: fis-hmc
+  releaseName: fis-hmc-api
   rollback:
     enable: true
     retry: true
   chart:
     git: git@github.com:hmcts/hmcts-charts
     ref: master
-    path: stable/fis-hmc
+    path: stable/fis-hmc-api
   values:
     java:
       replicas: 2
