--- a/apps/aso/aso.yaml
+++ b/apps/aso/aso.yaml
@@ -8,6 +8,12 @@ spec:
   chart:
     git: https://github.com/Azure/azure-service-operator
     ref: main
-    path: charts/azure-service-operator
+    path: v2/charts/azure-service-operator
   values:
     servivceName: azure-service-operator
+  dependencies:
+    - name: cert-manager
+      version: v1.9.1
+      repository: https://charts.jetstack.io
+      alias: cert-manager
+      condition: cert-manager.enabled
