--- a/clusters/ithc/base/kustomization.yaml
+++ b/clusters/ithc/base/kustomization.yaml
@@ -16,6 +16,7 @@ resources:
   - ../../../apps/nfdiv/base/kustomize.yaml
   - ../../../apps/hmc/base/kustomize.yaml
   - ../../../apps/et/base/kustomize.yaml
+  - ../../../apps/probate/base/kustomize.yaml
 patches:
   - path: ../../../apps/base/kustomize.yaml
     target:
