--- a/apps/fis/fis-hmc-api/fis-hmc-api.yaml
+++ b/apps/fis/fis-hmc-api/fis-hmc-api.yaml
@@ -1,18 +1,7 @@
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
+apiVersion: image.toolkit.fluxcd.io/v1alpha2
+kind: ImagePolicy
 metadata:
   name: fis-hmc-api
 spec:
-  releaseName: fis-hmc-api
-  interval: 1m
-  values:
-    java:
-      image: hmctspublic.azurecr.io/fis/hmc-api:prod-0468e73-20221006171923 #{"$imagepolicy": "flux-system:fis-hmc-api"}
-  chart:
-    spec:
-      chart: ./stable/fis-hmc-api
-      sourceRef:
-        kind: GitRepository
-        name: hmcts-charts
-        namespace: flux-system
-      interval: 1m
+  imageRepositoryRef:
+    name: fis-hmc-api
