--- a/k8s/namespaces/fees-pay/fees-register-frontend/perftest.yaml
+++ b/k8s/namespaces/fees-pay/fees-register-frontend/perftest.yaml
@@ -6,5 +6,6 @@ spec:
   releaseName: fees-register-frontend
   values:
     nodejs:
+      image: hmctspublic.azurecr.io/fees-register/frontend:prod-a840914-20221003160025 #{"$imagepolicy": "flux-system:perftest-fees-register-frontend"}
       environment:
         DUMMY_RESTART_VAR: true
