--- a/k8s/namespaces/fis/fis-hmc-api/aat.yaml
+++ b/k8s/namespaces/fis/fis-hmc-api/aat.yaml
@@ -31,6 +31,8 @@ spec:
         SERVICE_AUTH_PROVIDER_URL: 'http://rpe-service-auth-provider-aat.service.core-compute-aat.internal'
         IDAM_WEB_URL: 'https://idam-web-public.aat.platform.hmcts.net/login'
         IDAM_API_URL: 'https://idam-api.aat.platform.hmcts.net/o/token'
+        HMC_FIS_TOPIC_NAME: 'hmc-to-cft-aat'
+        HMC_FIS_SUBSCRIPTION_NAME: 'hmc-fis-subscription-aat'
     global:
       environment: aat
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
