--- a/k8s/namespaces/fis/fis-hmc-api/demo.yaml
+++ b/k8s/namespaces/fis/fis-hmc-api/demo.yaml
@@ -31,6 +31,8 @@ spec:
         SERVICE_AUTH_PROVIDER_URL: 'http://rpe-service-auth-provider-demo.service.core-compute-demo.internal'
         IDAM_WEB_URL: 'https://idam-web-public.demo.platform.hmcts.net/login'
         IDAM_API_URL: 'https://idam-api.demo.platform.hmcts.net/o/token'
+        HMC_FIS_TOPIC_NAME: 'hmc-to-cft-demo'
+        HMC_FIS_SUBSCRIPTION_NAME: 'hmc-fis-subscription-demo'
 
     global:
       environment: demo
