--- a/apps/aso/cert-manager/cert-manager.yaml
+++ b/apps/aso/cert-manager/cert-manager.yaml
@@ -8,6 +8,7 @@ spec:
   chart:
     spec:
       chart: cert-manager
+      version: 1.9.1
       sourceRef:
         kind: HelmRepository
         name: cert-manager
