--- a/k8s/namespaces/am/am-org-role-mapping-service/perftest.yaml
+++ b/k8s/namespaces/am/am-org-role-mapping-service/perftest.yaml
@@ -8,3 +8,4 @@ spec:
       environment:
         AM_INFO: false
         APPLICATION_LOGGING_LEVEL: INFO
+        REFRESH_JOB: LEGAL_OPERATIONS-CMC,UNSPEC-NEW-0
