--- a/apps/aso/sbox/base/kustomization.yaml
+++ b/apps/aso/sbox/base/kustomization.yaml
@@ -2,3 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../base
+  - ../../aso-controller-settings.yaml
+  - ../sealed-secrets
