--- a/apps/fis/automation/kustomization.yaml
+++ b/apps/fis/automation/kustomization.yaml
@@ -11,3 +11,5 @@ resources:
   - ../fis-ds-update-web/image-policy.yaml
   - ../fis-hmc-api/image-repo.yaml
   - ../fis-hmc-api/image-policy.yaml
+  - ../fis-hmc-api/image-repo.yaml
+  - ../fis-hmc-api/image-policy.yaml
