--- a/apps/et/perftest/base/kustomization.yaml
+++ b/apps/et/perftest/base/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - ../../base
   - ../../et-sya-api/et-sya-api.yaml
-  - ../../et-sya/et-sya.yaml
+  - ../../et-sya/et-sya-perftest.yaml
 namespace: et
 patchesStrategicMerge:
   - ../../identity/perftest.yaml
