--- a/k8s/namespaces/wa/wa-case-event-handler/aat.yaml
+++ b/k8s/namespaces/wa/wa-case-event-handler/aat.yaml
@@ -8,5 +8,5 @@ spec:
       image: hmctspublic.azurecr.io/wa/case-event-handler:prod-6a51b4e-20221007210126 #{"$imagepolicy": "flux-system:wa-case-event-handler"}
       environment:
         AZURE_SERVICE_BUS_FEATURE_TOGGLE: true
-        TEMP: true
+        TEMP: false
         PROBLEM_MESSAGE_RESET_ID_LIST: 489772
