--- a/apps/aso/aso/aso.yaml
+++ b/apps/aso/aso/aso.yaml
@@ -12,3 +12,6 @@ spec:
         kind: GitRepository
         name: azure-service-operator
         namespace: aso
+    valuesFrom:
+    - kind: Secret
+      name: aso-controller-settings
