--- a/apps/jenkins/jenkins/ptl-intsvc/jenkins.yaml
+++ b/apps/jenkins/jenkins/ptl-intsvc/jenkins.yaml
@@ -148,13 +148,13 @@ spec:
                     title: RPX-PR
                 - buildMonitor:
                     includeRegex: >-
-                      ^HMCTS_(\w_to_\w)(?!.*Nightly).*\/(ccd.*|aac.*|cpo.*|hmc.*|ts.*)\/master
+                      ^HMCTS_(\w_to_\w)(?!.*Nightly).*\/(?!.*ccd-case-disposer)(ccd.*|aac.*|cpo.*|hmc.*|ts.*)\/master
                     name: CDM
                     recurse: true
                     title: CDM Master Builds Dashboard
                 - buildMonitor:
                     includeRegex: >-
-                      ^HMCTS_(\w_to_\w_Nightly).*\/(ccd.*|aac.*|cpo.*|hmc.*|ts.*)\/master
+                      ^HMCTS_(\w_to_\w_Nightly).*\/(?!.*ccd-case-disposer)(ccd.*|aac.*|cpo.*|hmc.*|ts.*)\/master
                     name: CDM Nightly
                     recurse: true
                     title: CDM Nightly Builds Dashboard
@@ -268,7 +268,7 @@ spec:
                     title: PCQ
                 - buildMonitor:
                     includeRegex: >-
-                      ^HMCTS.*\/lau-.+\/master
+                      ^HMCTS.*\/(lau-.+|.*ccd-case-disposer)\/master
                     name: LAU
                     recurse: true
                     title: LAU
