--- a/k8s/namespaces/probate/probate-back-office/demo.yaml
+++ b/k8s/namespaces/probate/probate-back-office/demo.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   values:
     java:
-      image: hmctspublic.azurecr.io/probate/back-office:pr-2063-a464da7-20221006122513 #{"$imagepolicy": "flux-system:demo-probate-back-office"}
+      image: hmctspublic.azurecr.io/probate/back-office:pr-2063-a464da7-20221006122513 #{"$imagepolicy": "flux-system:probate-back-office"}
       environment:
         CCD_GATEWAY_HOST: https://manage-case.demo.platform.hmcts.net
         DUMMY_PROPERTY: DUMMY9
