--- a/.github/workflows/updatecli.yaml
+++ b/.github/workflows/updatecli.yaml
@@ -23,13 +23,19 @@ jobs:
         with:
           version: v0.33.3
 
+      - uses: tibdex/github-app-token@v1
+        id: generate-token
+        with:
+          app_id: ${{ secrets.DEPENDENCY_UPDATER_APP_ID }}
+          private_key: ${{ secrets.DEPENDENCY_UPDATER_APP_PRIVATE_KEY }}
+
       - name: Run Updatecli in Dry Run mode
         run: updatecli diff --config ./updatecli/weekly.d --values ./updatecli/values.github-action.yaml
         env:
-          UPDATECLI_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          UPDATECLI_GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
 
       - name: Run Updatecli in Apply mode
         if: github.ref == 'refs/heads/master'
         run: updatecli apply --config ./updatecli/weekly.d --values ./updatecli/values.github-action.yaml
         env:
-          UPDATECLI_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          UPDATECLI_GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
