--- a/apps/nfdiv/preview/base/kustomization.yaml
+++ b/apps/nfdiv/preview/base/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - ../../../aac/identity/identity.yaml
   - ../../../ccd/identity/identity.yaml
   - ../../nfdiv-cron-eligible-for-switch-to-sole/nfdiv-cron-eligible-for-switch-to-sole.yaml
+  - ../../nfdiv-cron-remind-awaiting-joint-final-order/nfdiv-cron-remind-awaiting-joint-final-order.yaml
 namespace: nfdiv
 patchesStrategicMerge:
   - ../../identity/aat.yaml
