--- a/apps/probate/base/kustomization.yaml
+++ b/apps/probate/base/kustomization.yaml
@@ -3,4 +3,5 @@ kind: Kustomization
 resources:
   - ../../base
   - ../identity/identity.yaml
+  - ../probate-caveats-fe/probate-caveats-fe.yaml
 namespace: probate
