--- a/apps/fis/base/kustomization.yaml
+++ b/apps/fis/base/kustomization.yaml
@@ -4,4 +4,5 @@ resources:
   - ../../base
   - ../identity/identity.yaml
   - ../fis-hmc-api/fis-hmc-api.yaml
+  - ../fis-bulk-scan-api/fis-bulk-scan-api.yaml
 namespace: fis
