--- a/k8s/namespaces/ia/ia-timed-event-service/aat.yaml
+++ b/k8s/namespaces/ia/ia-timed-event-service/aat.yaml
@@ -2,3 +2,7 @@ apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: ia-timed-event-service
+spec:
+  values:
+    java:
+      image: hmctspublic.azurecr.io/ia/timed-event-service:pr-87
